--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
                 "/consoleloggerparameters:NoSummary;ForceNoAlign"
             ],
             "problemMatcher": "$msCompile",
-            "group": {
+            "group": { // My addition to build in one step
                 "kind": "build",
                 "isDefault": true
             }
